Added tribute info section and figcaption
Added tribute info section and figcaption while removing CSS code to move to style.css

--- a/MonicaRambeauTribute.html
+++ b/MonicaRambeauTribute.html
@@ -1,12 +1,16 @@
 <style>
-  h1 {
-    font-size: 4rem;
-    margin-bottom: 0;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Martel:wght@200&family=Russo+One&display=swap');
 </style>
-<body>
   <main id="main">
     <h1 id="title">Monica Rambeau</h1>
     <figure id="img-div">
-      <img-id="monicaimage" src=""
-  </body>
+     <img id="image" src="https://user-images.githubusercontent.com/35049514/120403284-cd502300-c33b-11eb-9bf0-322e3c079b06.png"
+      alt="Monica Rambeau in a superhero landing"/>
+     <figcaption id="img-caption">
+      Monica Rambeau in her SWORD suit using her energy blast to soften her blow landing on the ground.
+      </figcaption>
+    </figure>
+    <section id="tribute-info">
+      <h3 id="history">Here is the history of Monica Rambeau:</h3>
+    </section>
+</main>
