Updated version of HTML file
Added a timeline to Monica Rambeau's events in the MCU.

--- a/MonicaRambeauTribute.html
+++ b/MonicaRambeauTribute.html
@@ -12,5 +12,26 @@
     </figure>
     <section id="tribute-info">
       <h3 id="history">Here is the history of Monica Rambeau:</h3>
+      <ul>
+        <li><strong>1984</strong> - Born to Maria and Frank Rambeau</li>
+        <li><strong>1990</strong> - Frank Rambeau <a id="mouseover" href=" " title="It's unknown if he died or just disappeared from the family in the MCU." style="background-color:#FFFFFF;color:#000000;text-decoration:none";>died*</a></li>
+        <li><strong>1995</strong> - Monica and Maria Rambeau reunite with <a id="tribute-link" href="https://marvelcinematicuniverse.fandom.com/wiki/Captain_Marvel" target="_blank">Carol Danvers</a></li>
+        <li><strong>1995</strong> - Monica meets <a href="https://marvelcinematicuniverse.fandom.com/wiki/Skrulls">Skrulls</a>.</li>
+        <li><strong>1995</strong> - Monica says goodbye to Carol Danvers.</li>
+        <li><strong>2012</strong> - Monica joins SWORD.</li>
+        <li><strong>2018</strong> - Monica becomes a victim of the Blip while visiting her mother at the hospital.</li>
+        <li><strong>October 2023</strong> - Monica is brought back to life by Bruce Banner and finds out her mother died.</li> 
+        <li><strong>November 5th 2023</strong> - Monica gets a mission to investigate the <a href="https://marvelcinematicuniverse.fandom.com/wiki/Westview_Anomaly">Westview Anomaly</a>.</li>
+        <li><strong>November 5th 2023</strong> - Monica accidentally gets pulled into said anomaly.</li>
+        <li><strong>November 7th 2023</strong> - Monica is thrown out of the anomaly by <a href="https://marvelcinematicuniverse.fandom.com/wiki/Scarlet_Witch">Wanda Maximoff</a>.</li>
+        <li><strong>November 10th 2023</strong> - Monica reenters the anomaly and gains superpowers.</li>
+        <li><strong>November 10th 2023</strong> - Monica uses her newfound powers to protect <a href="https://marvelcinematicuniverse.fandom.com/wiki/Billy_Maximoff">Billy</a> and <a href="https://marvelcinematicuniverse.fandom.com/wiki/Tommy_Maximoff">Tommy Maximoff</a> from bullets.</li>
+        <li><strong>November 10th 2023</strong> - Monica gets a new mission from <a href="https://marvelcinematicuniverse.fandom.com/wiki/Nick_Fury">Nick Fury</a> in space.</li>
+      </ul>
+      <blockquote>
+        <p>"I lost the person closest to me, too. The worst thing I can think of has already happened to me and I can't change it. I can't undo it. I can't control this pain anymore. And I don't think I want to, because it's my truth."</p>
+        <cite>-- Monica Rambeau</cite>
+      </blockquote>
+        <p>* - It's unknown if Frank Rambeau died or simply disappeared in the MCU
     </section>
 </main>
